<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Galactic Journey</string>
    <string name="menu">Menu</string>
    <string name="jugar">Play</string>
    <string name="opciones">Settings</string>
    <string name="compartir">Share</string>
    <string name="pref_control_juego_titulo">Game Control</string>
    <string name="pref_control_juego" translatable="false">pref_control_juego</string>
    <string name="pref_musica" translatable="false">pref_musica</string>
    <string name="pref_valor_volumen" translatable="false">pref_valor_volumen</string>
    <string name="pref_control_juego_summary">Control method of the ship</string>
    <string name="pref_acerca_de">About</string>
    <string name="banner_records_id" translatable="false">ca-app-pub-3760553259632229/9849510194</string>
    <string name="app_id" translatable="false">580766643432</string>
    <string name="achievement_jugar_por_primera_vez" translatable="false">CgkI6OmOw_MQEAIQAQ</string>
    <string name="achievement_jugar_5_veces_al_juego" translatable="false">CgkI6OmOw_MQEAIQAg</string>
    <string name="achievement_jugar_10_veces_al_juego" translatable="false">CgkI6OmOw_MQEAIQAw</string>
    <string name="achievement_jugar_20_veces_al_juego" translatable="false">CgkI6OmOw_MQEAIQBA</string>
    <string name="achievement_jugar_50_veces_al_juego" translatable="false">CgkI6OmOw_MQEAIQBQ</string>
    <string name="achievement_conseguir_2000_puntos" translatable="false">CgkI6OmOw_MQEAIQCA</string>
    <string name="achievement_conseguir_5000_puntos" translatable="false">CgkI6OmOw_MQEAIQCQ</string>
    <string name="achievement_conseguir_1000_puntos_con_3_vidas" translatable="false">CgkI6OmOw_MQEAIQCg</string>
    <string name="achievement_conseguir_3000_puntos_con_3_vidas" translatable="false">CgkI6OmOw_MQEAIQCw</string>
    <string name="leaderboard_marcador" translatable="false">CgkI6OmOw_MQEAIQBg</string>
    <string name="logros">Achievements</string>
    <string name="marcadores">Leaderboards</string>
    <string name="introduce_nombre">Insert your name:</string>
    <string name="pref_musica_titulo">Music</string>
    <string name="pref_musica_summary_on">Music enabled</string>
    <string name="pref_musica_summary_off">Music disabled</string>
    <string name="record">Records</string>
    <string name="pref_valor_volumen_nombre">Volume Level</string>
    <string name="pref_valor_volumen_summary">The current volume is %1$d</string>
    <string name="signin_failure">Unable to login</string>
    <string name="signin_other_error">Failed to login, try later</string>
    <string name="texto_compartir">I get 100 points in the game #GalacticJourney</string>
    <string name="title_activity_opciones">Settings</string>
    <string name="title_activity_records">Records</string>
    <string name="aceptar">Accept</string>
    <string name="texto_notificacion">Your ship is rusting. Come play.</string>

</resources>
