<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_control_juego_titulo">
        <ListPreference
            android:defaultValue="giroscopo"
            android:dialogTitle="@string/pref_control_juego_titulo"
            android:entries="@array/pref_control_juego_entries"
            android:entryValues="@array/pref_control_juego_values"
            android:key="@string/pref_control_juego"
            android:summary="@string/pref_control_juego_summary"
            android:title="@string/pref_control_juego_titulo" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_musica_titulo">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_musica"
            android:summaryOff="@string/pref_musica_summary_off"
            android:summaryOn="@string/pref_musica_summary_on"
            android:title="@string/pref_musica_titulo" />
        <com.aitor1995.galactic_journey.preferences.SeekPreference
            android:title="@string/pref_valor_volumen_nombre"
            android:defaultValue="100"
            android:dependency="@string/pref_musica"
            android:key="@string/pref_valor_volumen"
            app:max="100" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_acerca_de">
        <com.aitor1995.galactic_journey.preferences.AcercaDePreference android:title="@string/pref_acerca_de" />
    </PreferenceCategory>
</PreferenceScreen>